--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,16 +1,11 @@
-{% set name = "modrev-python" %}
-{% set version = "9999" %}
+{% set name = "pymodrev" %}
+{% set version = "1.0" %}
 package:
-  name: '{{ name|lower }}'
+  name: '{{ name }}'
   version: '{{ version }}'
 
 source:
   path: ../
-
-build:
-  number: 0
-  script: python setup.py install --single-version-externally-managed --record=record.txt
-  noarch: python
 
 requirements:
   build:
@@ -19,12 +14,9 @@ requirements:
 
   run:
     - python
-    - modrev
-    - py4j
     - colomoto_jupyter >=0.6.3
+    - modrev
 
 about:
-  home: https://github.com/Lourencom/modrev-python
+  home: https://github.com/Lourencom/pymodrev
   summary: 'Python interface for ModRev'
-  license_family: LGPL
-  license: LGPL v3+/CeCILL-C
