--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -3,7 +3,7 @@ package:
   version: 1.2
 
 source:
-  path: ../
+  path: ../src/main/
 
 build:
   script: python -m pip install --no-deps --ignore-installed .
@@ -18,6 +18,7 @@ requirements:
     - python
     - colomoto_jupyter
     - modrev
+    - ginsim-python
 
 about:
   home: https://github.com/Lourencom/pymodrev
